# hosted-cloud-adi

./: .gitmodules  Makefile  README.md  ansible.cfg  pyproject.toml
inventory/: adi.yml  cloud-provider.yml
inventory/group_vars/: all.yml  frontend.yml  node.yml
playbooks/: cloud-provider.yml
roles/example/defaults/: main.yml
roles/example/tasks/: main.yml
